--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://MousamVishwakarma.github.io/e-commerce",
-  "name": "e-commerce",
+ "homepage": "https://MousamVishwakarma.github.io/Task2-E-commerce-Pagewith-React",
+  "name":"Task2-E-commerce-Pagewith-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
